# LAFF-Platooning

./: .direnvrc  .envrc  .gitignore  .gitmodules  Makefile  README.md  requirements.txt
analysis/velocity/: plot.py
analysis/velocity_pwm_mapper/: plot.py
orchestrator/: __main__.py  gui.py  laff.service  server.py  shared.py  system.service  utils.py
orchestrator/client/: __main__.py  node.py  (+1 more)
results/: filter.py  plots.py
sensor-experiments/: 6tape.csv  8tapes.csv  plot-velocity.py
services/: laff.service  pigpio.service
simulations/: concat.py  deceleration-curve.py  kalman_filter.py  makefile  minimal-distance-without-model.py  mpc_gekko.py  mpc_gekko_test.py  mpc_gekko_test_ss.py  mpc_test.py  platoon.py  simulation-distance-model.py  simulation-pid-distance-model.py  simulation.py  vehicle.py
src/common/: CMakeLists.txt  package.xml  setup.py
src/common/nodes/: debug.py  distance.py  line_follower.py  object_follower.py  speed.py  velocity.py  velocity_pwm_mapper.py
src/common/src/common/: IR_array_driver.py  pwm_driver.py  reflective_sensor_driver.py  ultrasonic_driver.py
src/rcv/: CMakeLists.txt  package.xml  setup.py
src/rcv/assets/: default.csv  v3.csv
src/rcv/launch/: shared.launch  vehicle.launch  vehicle_bidirectional.launch  vehicle_joystick.launch  vehicle_pid.launch  vehicle_test.launch  velocity_pwm_mapper.launch
src/rcv/nodes/: bidirectional_controller.py  esc.py  joystick_controller.py  pid_controller.py  servo.py  simple_controller.py  velocity_pwm_mapper.py
src/rcv/src/rcv/: esc_driver.py  servo_driver.py  velocity_mapper.py
(+96 files in other folders)
